--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Placeholder</title>
+    <title>Music Reviews Social Media</title>
     <link rel="stylesheet" href="/stylesheets/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
@@ -16,7 +16,7 @@
           </a>
           <li><a href="/new">Post Review</a></li>
           <a href="/">
-            <h1 class="heading">Placeholder</h1></a
+            <h1 class="heading">MusicReviews</h1></a
           >
           <li><a href="/users/<%=current_user['id']%>"> <%=current_user["username"]%></a></li>
           <form action="/logout" method="post">
