--- a/views/profile.erb
+++ b/views/profile.erb
@@ -10,16 +10,16 @@
 <div class="feed-container">
   <% users_reviews.each do |review| %>
     <div class="review-container">
+    <p class="artist-name-home"><%= review['artist_name']%></p>
+    <div class="author-date">
       <a class="author-link" href="/users/<%=review['user_id']%>">
-        <h1 class="feed-author">@<%= user['username']%></h1></a
+        <h1 class="feed-author">BY USER: <%= review['username']%></h1></a
       >
       <p class="feed-date"><%= review['posting_date']%></p>
+</div>
 
-      <a href="/reviews/<%= review['id']%>">
-        <h1 class="feed-title"><%= review['title']%></h1></a
-      >
 
-      <p class="feed-content"><%= review['content']%></p>
+      <p class="feed-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quod consequuntur minima alias, dolorum quidem quas laudantium, molestiae suscipit inventore delectus reprehenderit maiores sunt deleniti atque expedita officiis, voluptates odio.</p>
 
       <a href="/reviews/<%= review['id']%>">
         <img class="feed-img" src="<%= review["album_img"] %>" alt=""/></a
