--- a/views/profile.erb
+++ b/views/profile.erb
@@ -13,7 +13,7 @@
     <p class="artist-name-home"><%= review['title']%></p>
     <div class="author-date">
       <a class="author-link" href="/users/<%=review['user_id']%>">
-        <h1 class="feed-author">BY USER: <%= review['username']%></h1></a
+        <h1 class="feed-author">BY USER: <%= user['username']%></h1></a
       >
       <p class="feed-date"><%= review['posting_date']%></p>
 </div>
