--- a/views/login.erb
+++ b/views/login.erb
@@ -1,12 +1,10 @@
 <div class="form-container">
-
-
-<form action="/login" method="post">
-  <h1 class="login-h1">Log In</h1>
-  <label class = "form-label">Username</label>
-  <input type="text" name="username" class="form-input">
-  <label class = "form-label">Password</label>
-  <input type="password" name="password" class="form-input">
-  <button>Log In</button>
-</form>
+  <form action="/login" method="post">
+    <h1 class="login-h1">Log In</h1>
+    <label class="form-label">Username</label>
+    <input type="text" name="username" class="form-input" />
+    <label class="form-label">Password</label>
+    <input type="password" name="password" class="form-input" />
+    <button>Log In</button>
+  </form>
 </div>
