--- a/views/post.erb
+++ b/views/post.erb
@@ -1,19 +1,18 @@
 <div class="form-container">
   <form action="/new" method="post">
     <h1>New Review</h1>
-    <label class = "form-label">Review Title</label>
-    <input type="text" name="title" class="form-input">
-    <label class = "form-label">Artist Name</label>
-    <input type="text" name="artist_name" class="form-input">
-    <label class = "form-label">Content</label>
+    <label class="form-label">Review Title</label>
+    <input type="text" name="title" class="form-input" />
+    <label class="form-label">Artist Name</label>
+    <input type="text" name="artist_name" class="form-input" />
+    <label class="form-label">Content</label>
     <textarea type="text" name="content" class="form-input"></textarea>
-    <label class = "form-label">Score</label>
-    <input type="number" name="score" class="form-input">
-    <label class = "form-label">Spotify Embed</label>
-    <input type="text" name="spotify_embed" class="form-input">
-    <label class = "form-label">Album Image</label>
-    <input type="text" name="album_img" class="form-input">
+    <label class="form-label">Score</label>
+    <input type="number" name="score" class="form-input" />
+    <label class="form-label">Spotify Embed</label>
+    <input type="text" name="spotify_embed" class="form-input" />
+    <label class="form-label">Album Image</label>
+    <input type="text" name="album_img" class="form-input" />
     <button>Post</button>
   </form>
 </div>
-
