--- a/views/signup.erb
+++ b/views/signup.erb
@@ -2,16 +2,21 @@
   <form action="/signup" method="post">
     <h1>Sign Up</h1>
     <div class="inputs">
-      <label class = "form-label">Username</label>
-      <input type="text" name="username">
-      <label class = "form-label">Email</label>
-      <input type="text"name="email">
-      <label class = "form-label">Password</label>
-      <input type="password" name="password" class="password" required>
-      <label class = "form-label">Confirm Password</label>
-      <input type="password" name="password" class="confirm_password" required>
+      <label class="form-label">Username</label>
+      <input type="text" name="username" />
+      <label class="form-label">Email</label>
+      <input type="text" name="email" />
+      <label class="form-label">Password</label>
+      <input type="password" name="password" class="password" required />
+      <label class="form-label">Confirm Password</label>
+      <input
+        type="password"
+        name="password"
+        class="confirm_password"
+        required
+      />
     </div>
     <button>Sign Up</button>
   </form>
 </div>
-  <script src="/javascripts/application.js"></script>
+<script src="/javascripts/application.js"></script>
