--- a/views/index.erb
+++ b/views/index.erb
@@ -1,29 +1,33 @@
 <div class="home-container">
   <% if logged_in? %>
   <div class="grid-container">
-  <h1 class="your-feed">Your Feed</h1>
-  <form action="/search">
-    <input
-      class="your-feed-search"
-      type="text"
-      placeholder="Search..."
-      name="q"
-    />
-  </form>
+    <h1 class="your-feed">Your Feed</h1>
+    <form action="/search">
+      <input
+        class="your-feed-search"
+        type="text"
+        placeholder="Search..."
+        name="q"
+      />
+    </form>
   </div>
   <div class="feed-container">
-   <% followed_reviewers.each do |review| %>
+    <% followed_reviewers.each do |review| %>
     <div class="review-container">
-    <p class="artist-name-home"><%= review['title']%></p>
-    <div class="author-date">
-      <a class="author-link" href="/users/<%=review['user_id']%>">
-        <h1 class="feed-author">BY USER: <%= review['username']%></h1></a
-      >
-      <p class="feed-date"><%= review['posting_date']%></p>
-</div>
+      <p class="artist-name-home"><%= review['title']%></p>
+      <div class="author-date">
+        <a class="author-link" href="/users/<%=review['user_id']%>">
+          <h1 class="feed-author">BY USER: <%= review['username']%></h1></a
+        >
+        <p class="feed-date"><%= review['posting_date']%></p>
+      </div>
 
-
-      <p class="feed-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quod consequuntur minima alias, dolorum quidem quas laudantium, molestiae suscipit inventore delectus reprehenderit maiores sunt deleniti atque expedita officiis, voluptates odio.</p>
+      <p class="feed-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quod
+        consequuntur minima alias, dolorum quidem quas laudantium, molestiae
+        suscipit inventore delectus reprehenderit maiores sunt deleniti atque
+        expedita officiis, voluptates odio.
+      </p>
 
       <a href="/reviews/<%= review['id']%>">
         <img class="feed-img" src="<%= review["album_img"] %>" alt=""/></a
@@ -39,16 +43,20 @@
   <div class="feed-container">
     <% latest_reviews.each do |review| %>
     <div class="review-container">
-    <p class="artist-name-home"><%= review['title']%></p>
-    <div class="author-date">
-      <a class="author-link" href="/users/<%=review['user_id']%>">
-        <h1 class="feed-author">BY USER: <%= review['username']%></h1></a
-      >
-      <p class="feed-date"><%= review['posting_date']%></p>
-</div>
+      <p class="artist-name-home"><%= review['title']%></p>
+      <div class="author-date">
+        <a class="author-link" href="/users/<%=review['user_id']%>">
+          <h1 class="feed-author">BY USER: <%= review['username']%></h1></a
+        >
+        <p class="feed-date"><%= review['posting_date']%></p>
+      </div>
 
-
-      <p class="feed-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quod consequuntur minima alias, dolorum quidem quas laudantium, molestiae suscipit inventore delectus reprehenderit maiores sunt deleniti atque expedita officiis, voluptates odio.</p>
+      <p class="feed-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quod
+        consequuntur minima alias, dolorum quidem quas laudantium, molestiae
+        suscipit inventore delectus reprehenderit maiores sunt deleniti atque
+        expedita officiis, voluptates odio.
+      </p>
 
       <a href="/reviews/<%= review['id']%>">
         <img class="feed-img" src="<%= review["album_img"] %>" alt=""/></a
