fixed nav bar h1

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,7 +31,7 @@
             <li>Explore</li>
           </a>
           <li>News</li>
-          <a href="/"> <h1 class="heading">Placeholder</h1></a>
+          <a href="/"> <h1 class="heading">MusicReviews</h1></a>
           <li><a href="/login"> Sign-in</a></li>
           <li><a href="/signup"> Sign-up</a></li>
 
